cluster/apps/traefik-system/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web #  punto de entrada HTTP (puerto 80)
  routes:
    # Redirige el tráfico del dashboard
    - match: Host(`traefik.homelab.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal # Uservicio especial que apunta al propio Traefik
          kind: TraefikService
